deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metanetx-production
spec:
  selector:
    matchLabels:
      app: metanetx
      env: production
  replicas: 2
  template:
    metadata:
      labels:
        app: metanetx
        env: production
    spec:
      containers:
      - name: web
        image: gcr.io/dd-decaf-cfbf6/metanetx:master
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        command: ["gunicorn", "-c", "gunicorn.py", "metanetx.wsgi:app"]
        readinessProbe:
          httpGet:
            path: /metanetx/healthz
            port: 8000
          initialDelaySeconds: 5
        resources:
          requests:
            cpu: "10m"
          limits:
            cpu: "2000m"
