deployment/service.yml
kind: Service
apiVersion: v1
metadata:
  name: metanetx
spec:
  selector:
    app: metanetx
    env: production
  ports:
  - name: web
    protocol: TCP
    port: 80
    targetPort: 8000
